// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component has an image 1`] = `
<div
  className="fdsAvatar bgColor--purple fdsAvatar--m color--white"
  role="img"
  title="Joey Tribbiani"
>
  <span
    className="fdsAvatar-img"
    style={
      Object {
        "backgroundImage": "url(lol.png)",
      }
    }
  />
  JT
</div>
`;

exports[`Avatar component has no image 1`] = `
<div
  className="fdsAvatar bgColor--purple fdsAvatar--m color--white"
  role="img"
  title="Joey Tribbiani"
>
  JT
</div>
`;

exports[`Avatar component matches snapshot (set all props) 1`] = `
<div
  className="fdsAvatar bgColor--aqua fdsAvatar--s color--white"
  role="img"
  title="Ross Gellar"
>
  <span
    className="fdsAvatar-img"
    style={
      Object {
        "backgroundImage": "url(lol.png)",
      }
    }
  />
  RG
</div>
`;
